adding new things and translated to pt-BR.
Added more elements to the page, translated to pt-BR and almost finished.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li class="active"><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
+                    <li class="active"><a href="">Página Principal</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Departamentos</a></li>
+                    <li><a href="">Calendário</a></li>
+                    <li><a href="">Galeria</a></li>
+                    <li><a href="">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,32 +32,32 @@
 <section id="banner">
     <div class="container column">
         <div class="banner_headline">
-            <h1>Top notch experience</h1>
-            <h2>Medicenter is a responsive template perfect for all screen sizes</h2>
+            <h1>Experiência de alto nível</h1>
+            <h2>Medicenter é o local correto para cuidar da sua saúde</h2>
         </div>
         <div class="banner_options">
             <div class="banner1">
-                <div class="banner_title">Emergency Case</div>
+                <div class="banner_title">Caso de Emergência</div>
                 <div class="banner_desc">Algum texto qualquer</div>
-                <a href="">Read more</a>
+                <a href="">Leia mais →</a>
             </div>
             <div class="banner2">
-                <div class="banner_title">Doctors Timetable</div>
+                <div class="banner_title">Horários Médicos</div>
                 <div class="banner_desc">Algum texto qualquer</div>
-                <a href="">Read more</a>
+                <a href="">Leia mais →</a>
             </div>
             <div class="banner3">
-                <div class="banner_title">Opening Hours</div>
+                <div class="banner_title">Horário de Funcionamento</div>
                 <div class="hour1">
-                    <div>Monday - Friday</div>
+                    <div>Segunda - Sexta</div>
                     <div>8:00 - 17:00</div>
                 </div>
                 <div class="hour2">
-                    <div>Saturday</div>
+                    <div>Sábado</div>
                     <div>9:30 - 17:30</div>
                 </div>
                 <div class="hour3">
-                    <div>Sunday</div>
+                    <div>Domingo</div>
                     <div>9:30 - 15:30</div>
                 </div>
             </div>
@@ -70,18 +70,89 @@
         <section>
             <div class="widget">
                 <div class="widget_title">
-                    <div class="widget_title_text">Latest News</div>
+                    <div class="widget_title_text">Última Notícias</div>
                     <div class="widget_title_bar"></div>
                 </div>
-                <div class="widget_body">
-                    ...
+                <div class="widget_body flex">
+                    <article>
+                        <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 DEZ 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/images/dr.jpg">
+                            </div>
+                            <div class="news_title">
+                                Lorem ipsum dolor sit amat velum
+                            </div>
+                            <div class="news_resume">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, odio libero amet mollitia voluptatum nobis, distinctio ab id suscipit delectus eius velit vel rem modi inventore quas aliquam, similique repellat!
+                            </div>
+                        </a>
+                    </article>
+
+                    <article>
+                        <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 DEZ 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/images/dr.jpg">
+                            </div>
+                            <div class="news_title">
+                                Lorem ipsum dolor sit amat velum
+                            </div>
+                            <div class="news_resume">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, odio libero amet mollitia voluptatum nobis, distinctio ab id suscipit delectus eius velit vel rem modi inventore quas aliquam, similique repellat!
+                            </div>
+                        </a>
+                    </article>
+
+                    <article>
+                        <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 DEZ 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/images/dr.jpg">
+                            </div>
+                            <div class="news_title">
+                                Lorem ipsum dolor sit amat velum
+                            </div>
+                            <div class="news_resume">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, odio libero amet mollitia voluptatum nobis, distinctio ab id suscipit delectus eius velit vel rem modi inventore quas aliquam, similique repellat!
+                            </div>
+                        </a>
+                    </article>
+
+                    <article>
+                        <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 DEZ 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/images/dr.jpg">
+                            </div>
+                            <div class="news_title">
+                                Lorem ipsum dolor sit amat velum
+                            </div>
+                            <div class="news_resume">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, odio libero amet mollitia voluptatum nobis, distinctio ab id suscipit delectus eius velit vel rem modi inventore quas aliquam, similique repellat!
+                            </div>
+                        </a>
+                    </article>
+
                 </div>
             </div>
         </section>
         <aside>
             <div class="widget">
                 <div class="widget_title">
-                    <div class="widget_title_text">Deparments</div>
+                    <div class="widget_title_text">Departamentos</div>
                     <div class="widget_title_bar"></div>
                 </div>
                 <div class="widget_body">
@@ -95,31 +166,161 @@
             </div>
             <div class="widget">
                 <div class="widget_title">
-                    <div class="widget_title_text">Make An Appointment</div>
+                    <div class="widget_title_text">Marque uma Consulta</div>
                     <div class="widget_title_bar"></div>
                 </div>
                 <div class="widget_body">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elite
                 </div>
                 <div class="widget_body_appointment_item">
-                    <div class="widget_body_appointment_text">
-                        by phone: <strong>1-800-843-584</strong>
+                    <div class="widget_body_appointment_phone">
+                        IMAGE por telefone: <strong>1-800-843-584</strong>
                     </div>
                 </div>
                 <div class="widget_body_appointment_item">
                     <div class="widget_body_appointment_text">
-                        by e-mail: <a href="mailto:medicenter@mail.com">medicenter@mail.com</a>
+                        IMAGE por e-mail: <a href="mailto:medicenter@mail.com">medicenter@mail.com</a>
                     </div>
                 </div>
                 <div class="widget_body_appointment_item">
                     <div class="widget_body_appointment_text">
-                        or <a href="">fill in the form</a> on or contact page
+                        IMAGE ou <a href="">preencha o formulário</a> de contato
                     </div>
                 </div>
             </div>
         </aside>
     </div>
 </section>
+
+<footer>
+    <div class="container flexColumn">
+        <div class="footer_menu">
+            <div class="fm_1">
+                <div class="fm_text1">
+                    Plano de Saúde
+                </div>
+                <div class="fm_text2">
+                    <a href="">Here in medicenter we have individual →</a>
+                </div>
+            </div>
+            <div class="fm_2">
+                <div class="fm_text1">
+                    Registros Médicos
+                </div>
+                <div class="fm_text2">
+                    <a href="">Here in medicenter we have individual →</a>
+                </div>
+            </div>
+            <div class="fm_3">
+                <div class="fm_text1">
+                    Pagamentos Onlines
+                </div>
+                <div class="fm_text2">
+                    <a href="">Here in medicenter we have individual →</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer_area">
+            <div class="footer_areaitem">
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Medicenter Clínica</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        Mauris adipiscing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual.
+                    </div>
+                    <div class="widget_body">
+                        <div>
+                            <div>Medicenter Clínica</div>
+                        </div>
+                        <div class="info1">
+                            <div>33 Farlane Street</div>
+                            <div>+123 655 655</div>
+                        </div>
+                        <div class="info2">
+                            <div>
+                                Keilor East
+                            </div>
+                            <div>
+                                +123 755 755
+                            </div>
+                        </div>
+                        <div class="info3">
+                            <div>
+                                VIC 3033, Australia
+                            </div>
+                            <div>
+                                <a href="mailto:medicenter@mail.com">medicenter@mail.com</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_areaitem">
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Últimas Postagens</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        <div>
+                            <div class="text">
+                                <div><a href="">Mauris adipiscing mauris fringilla turpis interdum sed pulvinar nisi.</a></div>
+                                <div class="datedesc">9 anos atrás</div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="text">
+                                <div><a href="">Lorem ipsum dolor sit amat velum.</a></div>
+                                <div class="datedesc">10 anos atrás</div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="text">
+                                <div><a href="">Lorem ipsum dolor sit amat velum, consectetur adipiscing elit.</a></div>
+                                <div class="datedesc">11 anos atrás</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_areaitem">
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Últimos Tweets</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        <div>
+                            <div class="twitter_text">
+                                <div>We've released new version (v6.8) of our #Timetable #Responsive #Booking #Schedule #WP Plugin. Please check at… <a href="">t.co/hdxFfHD5NK</a></div>
+                                <div class="datedesc">18 anos atrás</div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="twitter_text">
+                                <div>We have released new version (v6.1) of our Prestige #Portfolio #CV #vCard #WordPress #Theme Check at #ThemeForest <a href="">t.co/0jRV18Ce6x</a></div>
+                                <div class="datedesc">26 anos atrás</div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="twitter_text">
+                                <div>We've released new version (v13.2) of our MediCenter #Health #Medical #Clinic #WordPress Theme. Please check at… <a href="">t.co/s3LFzGxvFr</a></div>
+                                <div class="datedesc">28 anos atrás</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer_copy">
+            © Copyright - Todos os direitos reservados - Arthur Albuquerque by <a href="https://quanticalabs.com/home/" target="_blank">QuanticaLabs</a>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
